# sfml-ecs-pure-second-assigment

./: .gitignore  CMakeLists.txt  README.md
headers/: Components.h  DebugLog.hpp  Entity.h  EntityManager.h  Game.h  Vec2.h
src/: Entity.cpp  EntityManager.cpp  Game.cpp  Vec2.cpp  main.cpp
